feat: criando rota que trás as informações da programação
